# bim-audit-engine

./: README.md  pyproject.toml
.github/workflows/: ci.yml
bim_audit_engine/: __init__.py  engine.py  result.py
tests/: test_engine.py  test_purity.py
